// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/viewHeader/viewHeader return viewHeader 1`] = `
<div>
  <span
    class="variable variable"
  >
    <div
      class="MuiStack-root css-1y52uev-MuiStack-root"
    >
      <div
        class="ViewHeader  "
      >
        <div
          class="MuiTabs-root css-3wt4y5-MuiTabs-root"
        >
          <div
            class="MuiTabs-scroller MuiTabs-fixed css-1yalo2m-MuiTabs-scroller"
            style="overflow: hidden; margin-bottom: 0px;"
          >
            <div
              class="MuiTabs-flexContainer css-heg063-MuiTabs-flexContainer"
              role="tablist"
            >
              <button
                class="MuiButtonBase-root MuiTab-root MuiTab-textColorInherit disable-drag-selection css-l5nqp2-MuiButtonBase-root-MuiTab-root"
                data-view-id="view-id-1"
                draggable="true"
                role="tab"
                tabindex="-1"
                type="button"
                variant="text"
              >
                <p
                  class="MuiTypography-root MuiTypography-body1 css-n4hg7u-MuiTypography-root"
                >
                  <span>
                    <svg
                      class="BoardIcon Icon"
                      fill="currentColor"
                      height="20"
                      viewBox="0 0 24 24"
                      width="20"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <g
                        opacity="0.8"
                      >
                        <path
                          clip-rule="evenodd"
                          d="M4 4H20V20H4V4ZM2 4C2 2.89543 2.89543 2 4 2H20C21.1046 2 22 2.89543 22 4V20C22 21.1046 21.1046 22 20 22H4C2.89543 22 2 21.1046 2 20V4ZM8 6H6V12H8V6ZM11 6H13V16H11V6ZM18 6H16V9H18V6Z"
                          fill="currentColor"
                          fill-rule="evenodd"
                        />
                      </g>
                    </svg>
                    view title
                  </span>
                </p>
              </button>
            </div>
            <span
              class="MuiTabs-indicator css-1u6txc4-MuiTabs-indicator"
              style="left: 0px; width: 0px;"
            />
          </div>
        </div>
        <div
          class="view-actions MuiBox-root css-37urdo"
        >
          <span
            class=""
            data-mui-internal-clone-element="true"
          >
            <button
              class="Button IconButton css-w119tu"
              style="width: 28px; height: 28px;"
              type="button"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSvgIcon-colorSecondary MuiSvgIcon-fontSizeSmall css-1e279rb-MuiSvgIcon-root"
                data-testid="AddIcon"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M19 13h-6v6h-2v-6H5v-2h6V5h2v6h6z"
                />
              </svg>
            </button>
          </span>
        </div>
        <div
          class="octo-spacer"
        />
        <div
          class="view-actions MuiBox-root css-0"
        >
          <span
            aria-label="Filter"
            class=""
            data-mui-internal-clone-element="true"
          >
            <button
              class="Button IconButton css-w119tu"
              style="width: 32px;"
              type="button"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSvgIcon-colorPrimary MuiSvgIcon-fontSizeSmall css-1ha8syo-MuiSvgIcon-root"
                data-test="view-filter-button"
                data-testid="FilterListIcon"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M10 18h4v-2h-4zM3 6v2h18V6zm3 7h12v-2H6z"
                />
              </svg>
            </button>
          </span>
          <span
            aria-label="Sort"
            class=""
            data-mui-internal-clone-element="true"
          >
            <button
              class="Button IconButton css-w119tu"
              style="width: 32px;"
              type="button"
            >
              <svg
                fill="none"
                height="1em"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                style="font-size: 16px;"
                viewBox="0 0 24 24"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M0 0h24v24H0z"
                  fill="none"
                  stroke="none"
                />
                <path
                  d="M3 9l4 -4l4 4m-4 -4v14"
                />
                <path
                  d="M21 15l-4 4l-4 -4m4 4v-14"
                />
              </svg>
            </button>
          </span>
          <span
            aria-label="Search"
            class=""
            data-mui-internal-clone-element="true"
          >
            <button
              class="Button IconButton css-w119tu"
              style="width: 32px;"
              type="button"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSvgIcon-colorSecondary MuiSvgIcon-fontSizeSmall css-1e279rb-MuiSvgIcon-root"
                data-testid="SearchIcon"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M15.5 14h-.79l-.28-.27C15.41 12.59 16 11.11 16 9.5 16 5.91 13.09 3 9.5 3S3 5.91 3 9.5 5.91 16 9.5 16c1.61 0 3.09-.59 4.23-1.57l.27.28v.79l5 4.99L20.49 19zm-6 0C7.01 14 5 11.99 5 9.5S7.01 5 9.5 5 14 7.01 14 9.5 11.99 14 9.5 14"
                />
              </svg>
            </button>
          </span>
          <div
            class="MuiBox-root css-jw1lpn"
            data-test="view-header-actions-menu"
          >
            <span
              aria-label="Edit view layout, grouping, and more..."
              class=""
              data-mui-internal-clone-element="true"
            >
              <button
                class="Button IconButton css-w119tu"
                style="width: 32px;"
                type="button"
              >
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall css-411e09-MuiSvgIcon-root"
                  data-testid="MoreHorizOutlinedIcon"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M6 10c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2m12 0c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2m-6 0c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2"
                  />
                </svg>
              </button>
            </span>
          </div>
          <div
            class="MuiButtonGroup-root MuiButtonGroup-contained MuiButtonGroup-horizontal MuiButtonGroup-disableElevation MuiButtonGroup-colorPrimary css-tjkvc4-MuiButtonGroup-root"
            role="group"
          >
            <button
              class="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeSmall MuiButton-containedSizeSmall MuiButton-colorPrimary MuiButton-disableElevation MuiButtonGroup-grouped MuiButtonGroup-groupedHorizontal MuiButtonGroup-groupedContained MuiButtonGroup-groupedContainedHorizontal MuiButtonGroup-groupedContainedPrimary MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeSmall MuiButton-containedSizeSmall MuiButton-colorPrimary MuiButton-disableElevation MuiButtonGroup-firstButton css-10uqonn-MuiButtonBase-root-MuiButton-root"
              tabindex="0"
              type="button"
            >
              <div
                class="MuiTypography-root MuiTypography-subtitle1 css-fo8jal-MuiTypography-root"
              >
                New
              </div>
            </button>
            <button
              class="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeSmall MuiButton-containedSizeSmall MuiButton-colorPrimary MuiButton-disableElevation MuiButtonGroup-grouped MuiButtonGroup-groupedHorizontal MuiButtonGroup-groupedContained MuiButtonGroup-groupedContainedHorizontal MuiButtonGroup-groupedContainedPrimary MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeSmall MuiButton-containedSizeSmall MuiButton-colorPrimary MuiButton-disableElevation MuiButtonGroup-lastButton css-dzgl7c-MuiButtonBase-root-MuiButton-root"
              tabindex="0"
              type="button"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall css-411e09-MuiSvgIcon-root"
                data-testid="KeyboardArrowDownIcon"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M7.41 8.59 12 13.17l4.59-4.58L18 10l-6 6-6-6z"
                />
              </svg>
            </button>
          </div>
        </div>
      </div>
    </div>
  </span>
</div>
`;

exports[`components/viewHeader/viewHeader return viewHeader readonly 1`] = `
<div>
  <span
    class="variable variable"
  >
    <div
      class="MuiStack-root css-1y52uev-MuiStack-root"
    >
      <div
        class="ViewHeader  "
      >
        <div
          class="MuiTabs-root css-3wt4y5-MuiTabs-root"
        >
          <div
            class="MuiTabs-scroller MuiTabs-fixed css-1yalo2m-MuiTabs-scroller"
            style="overflow: hidden; margin-bottom: 0px;"
          >
            <div
              class="MuiTabs-flexContainer css-heg063-MuiTabs-flexContainer"
              role="tablist"
            >
              <button
                class="MuiButtonBase-root MuiTab-root MuiTab-textColorInherit disable-drag-selection css-l5nqp2-MuiButtonBase-root-MuiTab-root"
                data-view-id="view-id-1"
                draggable="true"
                role="tab"
                tabindex="-1"
                type="button"
                variant="text"
              >
                <p
                  class="MuiTypography-root MuiTypography-body1 css-n4hg7u-MuiTypography-root"
                >
                  <span>
                    <svg
                      class="BoardIcon Icon"
                      fill="currentColor"
                      height="20"
                      viewBox="0 0 24 24"
                      width="20"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <g
                        opacity="0.8"
                      >
                        <path
                          clip-rule="evenodd"
                          d="M4 4H20V20H4V4ZM2 4C2 2.89543 2.89543 2 4 2H20C21.1046 2 22 2.89543 22 4V20C22 21.1046 21.1046 22 20 22H4C2.89543 22 2 21.1046 2 20V4ZM8 6H6V12H8V6ZM11 6H13V16H11V6ZM18 6H16V9H18V6Z"
                          fill="currentColor"
                          fill-rule="evenodd"
                        />
                      </g>
                    </svg>
                    view title
                  </span>
                </p>
              </button>
            </div>
            <span
              class="MuiTabs-indicator css-1u6txc4-MuiTabs-indicator"
              style="left: 0px; width: 0px;"
            />
          </div>
        </div>
        <div
          class="octo-spacer"
        />
        <div
          class="view-actions MuiBox-root css-0"
        >
          <span
            aria-label="Search"
            class=""
            data-mui-internal-clone-element="true"
          >
            <button
              class="Button IconButton css-w119tu"
              style="width: 32px;"
              type="button"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSvgIcon-colorSecondary MuiSvgIcon-fontSizeSmall css-1e279rb-MuiSvgIcon-root"
                data-testid="SearchIcon"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M15.5 14h-.79l-.28-.27C15.41 12.59 16 11.11 16 9.5 16 5.91 13.09 3 9.5 3S3 5.91 3 9.5 5.91 16 9.5 16c1.61 0 3.09-.59 4.23-1.57l.27.28v.79l5 4.99L20.49 19zm-6 0C7.01 14 5 11.99 5 9.5S7.01 5 9.5 5 14 7.01 14 9.5 11.99 14 9.5 14"
                />
              </svg>
            </button>
          </span>
        </div>
      </div>
    </div>
  </span>
</div>
`;
